--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-
+<html lang="en">
 <head>
     <title>New York Times Most Popular</title>
     <link rel="stylesheet" href="style.css">
